--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "vite": "^5.0.12",
+    "xlsx": "^0.18.5"
   }
 }
